--- a/composer.json
+++ b/composer.json
@@ -2,16 +2,19 @@
   "name": "jaypha/array-table",
   "description": "Database style join functions for arrays.",
   "license" : "BSL-1.0",
-  "require": {
-    "php": "^5.0 || ^7.0"
-  },
   "authors": [
     {
       "name": "Jason den Dulk",
       "role": "Developer"
     }
   ],
-  "autoload" : {
+  "autoload": {
     "psr-4": { "Jaypha\\": "src/" }
+  },
+  "require": {
+    "php": "^5.0 || ^7.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^6"
   }
 }
